--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
+
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Farmácia São Gonçalo</title>
-    <link rel='stylesheet' href='style.css'>
-  </head>
-  <body>
-    <h1>Bem-vindo ao sistema da farmácia!</h1>
-    <script src='login.js'></script>
-  </body>
+<head>
+  <title>Dashboard - Farmácia São Gonçalo</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="navbar">Farmácia São Gonçalo - Dashboard</div>
+  <div class="dashboard">
+    <a href="estoque.html">📦 Estoque</a>
+    <a href="fiado.html">💳 Controle de Fiado</a>
+    <a href="login.html">🔒 Sair</a>
+  </div>
+</body>
 </html>
